--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -17,12 +17,40 @@
             android:layout_height="match_parent"/>
 
         <ImageView
+            android:id="@+id/btnShoot"
+            android:layout_width="71dp"
+            android:layout_height="85dp"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:layout_width="90dp"
-            android:layout_height="100dp"
-            android:id="@+id/btnShoot"
-            android:src="@drawable/camera"/>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/capture2" />
+
+        <ImageView
+            android:id="@+id/btnFlash"
+            android:layout_width="49dp"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="529dp"
+            android:src="@drawable/flashoff"
+            android:onClick="clickToFlash"/>
+
+        <ImageView
+            android:id="@+id/btnChange"
+            android:layout_width="41dp"
+            android:layout_height="48dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="17dp"
+            android:onClick="clickToChangeCamera"
+            android:src="@drawable/change2" />
+
+
     </RelativeLayout>
 
 
