--- a/app/src/main/res/layout/picture_history_item_layout.xml
+++ b/app/src/main/res/layout/picture_history_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -10,39 +10,6 @@
         android:layout_height="150dp"
         android:src="@drawable/owl" />
 
-    <LinearLayout
-        android:weightSum="3"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical">
 
-        <TextView
-            android:layout_weight="1"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:id="@+id/txtEng1"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="English 1" />
 
-        <TextView
-            android:layout_weight="1"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:id="@+id/txtEng2"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="English 1" />
-
-        <TextView
-            android:layout_weight="1"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:id="@+id/txtEng3"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="English 1" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
