--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     android:weightSum="12"
-    android:background="@color/colorBackground"
     tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
@@ -15,24 +15,23 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/colorToolbar"
-        android:elevation="4dp"
+        android:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="Cú Cú"
-        app:titleTextColor="#ffffff"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        app:titleTextColor="#ffffff" />
 
     <RelativeLayout
-        android:layout_weight="9"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="9">
 
         <ProgressBar
-            android:visibility="invisible"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:indeterminate="true"
+            android:visibility="invisible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,45 +51,45 @@
                 android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_weight="1.5"
-                android:weightSum="10"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="10">
 
                 <ImageView
                     android:id="@+id/btnRead1"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_weight="3"
                     android:scaleType="fitCenter"
-                    android:layout_gravity="center"
                     android:src="@drawable/speaker"
                     android:text="Read" />
 
                 <TextView
-                    android:background="@drawable/border_eng"
-                    android:layout_weight="3"
                     android:id="@+id/txtResult1"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:background="@drawable/border_eng"
                     android:gravity="center"
                     android:text="English" />
 
                 <TextView
-                    android:layout_weight="3"
                     android:id="@+id/txtVietname1"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:layout_weight="3"
                     android:background="@drawable/border_vie"
+                    android:gravity="center"
                     android:text="Vietnamese" />
 
                 <TextView
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
             </LinearLayout>
 
             <LinearLayout
@@ -98,47 +97,46 @@
                 android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_weight="1.5"
-                android:weightSum="10"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="10">
 
                 <ImageView
                     android:id="@+id/btnRead2"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_weight="3"
                     android:scaleType="fitCenter"
-                    android:layout_gravity="center"
                     android:src="@drawable/speaker"
                     android:text="Read" />
 
                 <TextView
-                    android:background="@drawable/border_eng"
-                    android:layout_weight="3"
                     android:id="@+id/txtResult2"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:background="@drawable/border_eng"
                     android:gravity="center"
                     android:text="English" />
 
 
-
                 <TextView
-                    android:background="@drawable/border_vie"
-                    android:layout_weight="3"
                     android:id="@+id/txtVietname2"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:background="@drawable/border_vie"
                     android:gravity="center"
                     android:text="Vietnamese" />
 
                 <TextView
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
             </LinearLayout>
 
             <LinearLayout
@@ -146,45 +144,45 @@
                 android:layout_height="0dp"
                 android:layout_gravity="center"
                 android:layout_weight="1.5"
-                android:weightSum="10"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="10">
 
                 <ImageView
-                    android:layout_gravity="center"
                     android:id="@+id/btnRead3"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="center"
                     android:layout_weight="3"
                     android:scaleType="fitCenter"
                     android:src="@drawable/speaker"
                     android:text="Read" />
 
                 <TextView
-                    android:background="@drawable/border_eng"
-                    android:layout_weight="3"
                     android:id="@+id/txtResult3"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:background="@drawable/border_eng"
                     android:gravity="center"
                     android:text="English" />
 
                 <TextView
-                    android:background="@drawable/border_vie"
-                    android:layout_weight="3"
                     android:id="@+id/txtVietname3"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:background="@drawable/border_vie"
                     android:gravity="center"
                     android:text="Vietnamese" />
 
                 <TextView
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
@@ -193,8 +191,8 @@
         android:id="@+id/btnCamera"
         android:layout_width="70dp"
         android:layout_height="0dp"
-    android:layout_gravity="center"
-    android:layout_weight="2"
-    android:src="@drawable/camera" />
+        android:layout_gravity="center"
+        android:layout_weight="2"
+        android:src="@drawable/camera" />
 
 </LinearLayout>
