--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     tools:context=".LoginActivity">
 
     <EditText
+        android:text="hoang7020"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edtUsername"
@@ -17,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edtPassword"
+        android:text="123456"
         android:hint="Password"/>
 
     <Button
