--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
             android:text="/'mʌŋki/ " />
 
         <TextView
+            android:textStyle="bold"
             android:id="@+id/txtVienamese1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,7 +102,7 @@
 
     <ImageView
         android:id="@+id/ivResult"
-        android:layout_width="383dp"
+        android:layout_width="match_parent"
         android:layout_height="206dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
