--- a/app/src/main/res/layout/activity_learn.xml
+++ b/app/src/main/res/layout/activity_learn.xml
@@ -8,7 +8,7 @@
 
     <VideoView
         android:id="@+id/videoView"
-        android:layout_width="428dp"
+        android:layout_width="380dp"
         android:layout_height="250dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
@@ -18,7 +18,7 @@
         android:translationZ="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintHorizontal_bias="0.863"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -27,11 +27,15 @@
         android:id="@+id/btnPlay"
         android:layout_width="50dp"
         android:layout_height="54dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:src="@drawable/camera"
         android:translationZ="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/videoView"
         app:layout_constraintEnd_toEndOf="@+id/videoView"
         app:layout_constraintStart_toStartOf="@+id/videoView"
-        app:layout_constraintTop_toTopOf="@+id/videoView" />
+        app:layout_constraintTop_toTopOf="@+id/videoView"
+        app:layout_constraintVertical_bias="0.452" />
 
 </android.support.constraint.ConstraintLayout>
