--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
             android:gravity="center"
             android:text="Monkey"
             android:textColor="#ff6f00"
-            android:textSize="40dp" />
+            android:textSize="50dp" />
 
         <TextView
             android:id="@+id/txtPronunciation"
@@ -102,7 +102,7 @@
 
     <ImageView
         android:id="@+id/ivResult"
-        android:layout_width="match_parent"
+        android:layout_width="391dp"
         android:layout_height="206dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
