--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBackground">#ffffff</color>
+    <color name="colorBackground">#f3fffe</color>
     <color name="colorToolbar">#1369CE</color>
     <color name="textStartActivity">#fffcfc</color>
 </resources>
