--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/colorToolbar"
+    android:background="@drawable/bg"
     tools:context=".StartActivity">
 
     <com.airbnb.lottie.LottieAnimationView
