--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/result"
     tools:context=".MainActivity"
     >
 
@@ -54,16 +54,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/txtResult1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lapsusprobold"
-            android:gravity="center"
-            android:text="Monkey"
-            android:textColor="#ecef56"
-            android:textSize="50dp" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="99dp"
+                android:layout_height="73dp"
+                android:src="@drawable/hand" />
+
+            <TextView
+                android:id="@+id/txtResult1"
+                android:layout_width="178dp"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/lapsusprobold"
+                android:gravity="center"
+                android:text="Monkey"
+                android:textColor="#ff0000"
+                android:textSize="50dp" />
+
+
+
+
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/txtPronunciation"
@@ -72,7 +89,7 @@
             android:gravity="center"
             android:text="/'mʌŋki/ "
             android:textSize="25dp"
-            android:textColor="#e4c4c4"/>
+            android:textColor="#000000"/>
 
         <TextView
             android:textStyle="bold"
@@ -83,7 +100,9 @@
             android:gravity="center"
             android:text="Con Khỉ"
             android:textSize="35dp"
-            android:textColor="#ecef56"/>
+            android:textColor="#ff0000"/>
+
+
     </LinearLayout>
 
 
