learn pen and learn book

--- a/app/src/main/res/layout/activity_learn_pen.xml
+++ b/app/src/main/res/layout/activity_learn_pen.xml
@@ -4,13 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LearnActivity"
-    android:background="@drawable/result">
-
-
-
-
-
+    tools:context=".LearnPenActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -31,41 +25,41 @@
         app:srcCompat="@drawable/monkey" />
 
     <EditText
-        android:focusable="false"
         android:id="@+id/editText1"
         android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
-
         android:layout_marginStart="60dp"
+
         android:layout_marginLeft="60dp"
         android:layout_marginTop="112dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
-        android:focusable="false"
-
         android:id="@+id/editText2"
+
         android:layout_width="35dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView2"
-
         android:layout_marginStart="60dp"
+
         android:layout_marginLeft="60dp"
         android:layout_marginTop="112dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:focusable="false"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -85,65 +79,7 @@
         android:focusable="false"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.316"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <EditText
-        android:id="@+id/editText4"
-
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-        android:layout_marginStart="60dp"
-
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:focusable="false"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <EditText
-        android:focusable="false"
-
-        android:id="@+id/editText5"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.64"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <EditText
-        android:focusable="false"
-
-        android:id="@+id/editText6"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/editText1"
-
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.644"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -198,7 +134,7 @@
         android:onClick="clickToAddCharT"/>
 
     <Button
-        android:id="@+id/charY"
+        android:id="@+id/charB"
         android:layout_width="46dp"
         android:layout_height="38dp"
         android:layout_marginStart="8dp"
@@ -206,11 +142,11 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Y"
+        android:text="B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText1"
-        android:onClick="clickToAddCharY"/>
+        android:onClick="clickToAddCharB"/>
 
     <Button
         android:id="@+id/charE"
@@ -229,7 +165,7 @@
         android:onClick="clickToAddCharE"/>
 
     <Button
-        android:id="@+id/charX"
+        android:id="@+id/charP"
         android:layout_width="46dp"
         android:layout_height="38dp"
         android:layout_marginStart="8dp"
@@ -237,12 +173,12 @@
         android:layout_marginTop="84dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="X"
+        android:text="P"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText1"
-        android:onClick="clickToAddCharX"
+        android:onClick="clickToAddCharP"
         />
 
     <Button
@@ -325,6 +261,5 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
 
 </android.support.constraint.ConstraintLayout>
