--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/colorToolbar"
-    tools:context=".StartActivity">
+    tools:context=".activity.StartActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_gravity="center"
