--- a/app/src/main/res/layout/picture_history_item_layout.xml
+++ b/app/src/main/res/layout/picture_history_item_layout.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/imvPicture"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/owl" />
 
-
-
-</RelativeLayout>
+</LinearLayout>
