--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="12"
-    tools:context=".HistoryActivity">
+    tools:context=".activity.HistoryActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/tbHistory"
