--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
         android:hint="Username"/>
 
     <EditText
+        android:inputType="textPassword"
         android:layout_marginBottom="15dp"
         android:textSize="25sp"
         android:background="#ffffff"
