--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,15 +29,22 @@
 
         <TextView
             android:text="Username: "
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:id="@+id/txtUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:text="Address: "
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:id="@+id/txtAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:text="Date Created: "
+            android:textSize="20dp"
+            android:id="@+id/txtDateCreated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
