--- a/app/src/main/res/layout/activity_begin.xml
+++ b/app/src/main/res/layout/activity_begin.xml
@@ -53,8 +53,9 @@
         app:layout_constraintVertical_bias="0.346" />
 
     <Button
+        android:fontFamily="@font/lapus"
         android:id="@+id/btnHistory"
-        android:text="History"
+        android:text="Lịch Sử"
         android:layout_width="133dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
