--- a/app/src/main/res/layout/picture_history_item_layout.xml
+++ b/app/src/main/res/layout/picture_history_item_layout.xml
@@ -5,11 +5,10 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/imvPicture"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/owl" />
-
-
 
 </RelativeLayout>
